--- a/app/src/main/res/layout/other_chatting_item.xml
+++ b/app/src/main/res/layout/other_chatting_item.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="200dp"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp">
     <RelativeLayout
-        android:background="@color/purple_200"
         android:layout_weight="4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -25,8 +24,7 @@
         android:id="@+id/Chatting_User_Name_TV"
         android:textSize="10dp"
         android:text="유저 이름"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginLeft="5dp"
         android:layout_toRightOf="@+id/Chatting_User_Img_CIV"
         android:textColor="@color/black"
         android:layout_width="wrap_content"
@@ -34,37 +32,33 @@
     </TextView>
     <RelativeLayout
         android:id="@+id/Chatting_Text_Container"
-        android:layout_marginTop="5dp"
         android:layout_toRightOf="@+id/Chatting_User_Img_CIV"
         android:layout_below="@id/Chatting_User_Name_TV"
-        android:layout_margin="5dp"
+        android:padding="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/Chatting_Text_TV"
-            android:gravity="center"
+            android:background="@drawable/other_chat_background"
+            android:gravity="left"
             android:padding="10dp"
             android:text="내용입력창입니다."
             android:textColor="@color/black"
             android:textSize="10dp"
+            android:layout_marginBottom="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
         </TextView>
         <TextView
             android:text="입력시간"
             android:id="@+id/Chatting_WriteDate_TV"
-            android:layout_toRightOf="@+id/Chatting_Text_TV"
+            android:layout_alignRight="@+id/Chatting_Text_TV"
             android:layout_below="@id/Chatting_Text_TV"
             android:textSize="7dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
         </TextView>
-    </RelativeLayout>
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_weight="6"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </RelativeLayout>
+            </RelativeLayout>
+        </RelativeLayout>
 </LinearLayout>
 </layout>
