--- a/app/src/main/res/layout/other_chatting_reply.xml
+++ b/app/src/main/res/layout/other_chatting_reply.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_margin="5dp">
         <RelativeLayout
-            android:background="@color/purple_200"
-            android:layout_weight="4"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/Chatting_User_Img_CIV"
@@ -35,9 +33,12 @@
             <RelativeLayout
                 android:id="@+id/Chatting_Text_Container"
                 android:layout_marginTop="5dp"
+                android:background="@drawable/other_chat_background"
                 android:layout_toRightOf="@+id/Chatting_User_Img_CIV"
                 android:layout_below="@id/Chatting_User_Name_TV"
-                android:layout_margin="5dp"
+                android:layout_marginBottom="5dp"
+                android:padding="5dp"
+                android:layout_marginLeft="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <RelativeLayout
@@ -71,7 +72,7 @@
                 <TextView
                     android:id="@+id/Chatting_Text_TV"
                     android:layout_below="@id/Reply_Containier"
-                    android:gravity="center"
+                    android:gravity="left"
                     android:padding="10dp"
                     android:text="내용입력창입니다."
                     android:textColor="@color/black"
@@ -79,21 +80,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                 </TextView>
-                <TextView
-                    android:text="입력시간"
-                    android:id="@+id/Chatting_WriteDate_TV"
-                    android:layout_below="@id/Chatting_Text_TV"
-                    android:layout_alignParentRight="true"
-                    android:textSize="7dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                </TextView>
             </RelativeLayout>
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_weight="6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            <TextView
+                android:text="입력시간"
+                android:id="@+id/Chatting_WriteDate_TV"
+                android:layout_below="@id/Chatting_Text_Container"
+                android:layout_alignRight="@id/Chatting_Text_Container"
+                android:textSize="7dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            </TextView>
         </RelativeLayout>
     </LinearLayout>
 </layout>
