--- a/app/src/main/res/layout/other_chatting_item.xml
+++ b/app/src/main/res/layout/other_chatting_item.xml
@@ -25,6 +25,7 @@
         android:textSize="10dp"
         android:text="유저 이름"
         android:layout_marginLeft="5dp"
+        android:fontFamily="@font/uhbeerice"
         android:layout_toRightOf="@+id/Chatting_User_Img_CIV"
         android:textColor="@color/black"
         android:layout_width="wrap_content"
@@ -43,6 +44,7 @@
             android:gravity="left"
             android:padding="10dp"
             android:text="내용입력창입니다."
+            android:fontFamily="@font/uhbeerice"
             android:textColor="@color/black"
             android:textSize="10dp"
             android:layout_marginBottom="5dp"
