--- a/app/src/main/res/layout/my_chatting_reply.xml
+++ b/app/src/main/res/layout/my_chatting_reply.xml
@@ -30,6 +30,7 @@
                         android:textColor="@color/black"
                         android:textSize="10dp"
                         android:padding="2dp"
+                        android:fontFamily="@font/uhbeerice"
                         android:background="@drawable/post_view_title_under_edge_1dp"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentTop="true"
@@ -44,6 +45,7 @@
                         android:layout_centerInParent="true"
                         android:layout_below="@+id/Replied_Name"
                         android:text="답장칸"
+                        android:fontFamily="@font/uhbeerice"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
                     </TextView>
@@ -54,6 +56,7 @@
                     android:gravity="left"
                     android:text="내용입력창입니다."
                     android:textColor="@color/black"
+                    android:fontFamily="@font/uhbeerice"
                     android:layout_below="@id/Reply_Containier"
                     android:layout_alignParentRight="true"
                     android:textSize="10dp"
