--- a/app/src/main/res/layout/other_chatting_reply.xml
+++ b/app/src/main/res/layout/other_chatting_reply.xml
@@ -23,6 +23,7 @@
                 android:id="@+id/Chatting_User_Name_TV"
                 android:textSize="10dp"
                 android:text="유저 이름"
+                android:fontFamily="@font/uhbeerice"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"
                 android:layout_toRightOf="@+id/Chatting_User_Img_CIV"
@@ -52,6 +53,7 @@
                         android:textColor="@color/black"
                         android:textSize="10dp"
                         android:gravity="left"
+                        android:fontFamily="@font/uhbeerice"
                         android:background="@drawable/post_view_title_under_edge_1dp"
                         android:layout_alignParentTop="true"
                         android:layout_width="match_parent"
@@ -65,6 +67,7 @@
                         android:layout_centerInParent="true"
                         android:layout_below="@+id/Replied_Name"
                         android:text="답장칸"
+                        android:fontFamily="@font/uhbeerice"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
                     </TextView>
@@ -76,6 +79,7 @@
                     android:padding="10dp"
                     android:text="내용입력창입니다."
                     android:textColor="@color/black"
+                    android:fontFamily="@font/uhbeerice"
                     android:textSize="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
