--- a/app/src/main/res/layout/post__write__fragment.xml
+++ b/app/src/main/res/layout/post__write__fragment.xml
@@ -69,6 +69,7 @@
             android:id="@+id/Dialog_Posting_Content"
             android:background="#50000000"
             android:hint="텍스트"
+            android:fontFamily="@font/uhbeerice"
             android:layout_centerInParent="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -100,6 +101,7 @@
             android:text="모든 사용자"
             android:textColor="@color/black"
             android:textSize="10dp"
+            android:fontFamily="@font/uhbeerice"
             android:background="@android:color/transparent"
             android:layout_marginRight="10dp"
             android:layout_alignParentRight="true"
